static/css/zamboni/mobile.css
/* ... */
table th {
    background: #f4f4f4;
    color: #666;
    text-align: right;
    font-weight: bold;
    width: 50%;
}
.html-rtl table th {
    text-align: left;
}
#content {
    width: 100%;
    overflow: hidden;
    position: relative;
    padding: 8px 0 16px;
}

.paginator {
    display: -moz-box;
    display: -webkit-box;
    text-align: center;
    color: #ccc;
    font-size: 1.1em;
    width: 100%;
    height: 40px;
}
.paginator .page {
    color: #666;
    margin: 0 2%;
    -moz-box-flex: 1;
    -webkit-box-flex: 1;
}
.paginator a {
    padding: 14px;
}
.paginator .next a:after {
    content: ' \00bb';
}
.paginator .prev a:before {
    content: ' \00ab';
}

/************************************/
/*            SORT MENU             */
/************************************/

#sort-menu {
    -moz-box-align: center;
    padding: 0 14px;
}

#sort-menu ul {
    height: 0;
    position: relative;
    top: -1px;
    overflow: hidden;
    -moz-transition: .5s height ease;
    -webkit-transition: .5s height ease;
    border: 0px solid transparent;
    border-width: 1px 0;
    margin: 0 -14px;
}

#sort-menu.expand ul {
    border-color: #a9badb;
    height: 407px;
}
.purchases #sort-menu.expand ul {
    height: 100px;
}

#sort-menu li {
    border-top: 1px solid #dde4ef;
}
#sort-menu li a {
    display: block;
    height: 26px;
    line-height: 26px;
    padding: 12px 14px;
}
#sort-menu li:first-child {
    border-top: 0;
}

#sort-menu .label {
    color: #888;
}

#sort-menu .label span {
    position: relative;
    display: inline-block;
    z-index: 10;
    background: transparent;
    color: #447bc4;
    text-align: center;
    white-space: nowrap;
    border: 1px solid transparent;
    border-width: 1px 1px 0 1px;
    border-radius: 6px 6px 0 0;
    -moz-border-radius: 6px 6px 0 0;
    -webkit-border-radius: 6px 6px 0 0;
    margin-left: 4px;
    padding: 11px 22px 11px 6px;
    -moz-transition: .3s background ease;
}
#sort-menu.expand .label span {
    background: white;
    border-color: #a9badb;
    border-bottom: 1px solid white;
    box-shadow: 0 -1px 1px #dde4ef;
}
/* menu arrow */
#sort-menu .label span:after {
    top: 16px;
    border: 5px solid transparent;
    border-top-color: #447BC4;
}

#sort-menu.expand .label span:after {
    -moz-transform: rotate(180deg);
    -webkit-transform: rotate(180deg);
}


/************************************/
/*               TABS               */
/************************************/

.tabs {
    border-bottom: 1px solid #a2bbdc;
    height: 41px;
    font: 16px Georgia, serif;
    padding: 14px 14px 0;
    box-shadow: 0 -1px 1px rgba(0,0,0,.1) inset;
}
.tabs ul {
    display: -webkit-box;
    display: -moz-box;
    margin: 0px;
    width: 100%;
    z-index: 1;
}

.tabs ul li {
    -moz-box-flex: 1;
    -webkit-box-flex: 1;
    border: 0;
    -webkit-transition: .3s background ease;
    -moz-transition: .3s background ease;
}
.tabs a:-moz-focusring {
    outline: 0;
    border: 0;
}
.tabs ul li a {
    display: block;
    white-space: nowrap;
    text-align: center;
    color: #447bc4;
    padding: 11px 8px 11px 6px;
}
.tabs ul li.selected {
    background: white;
    box-shadow: 0 -1px 1px rgba(0,0,0,.1);
    border: 1px solid #a2bbdc;
    border-width: 1px 1px 0 1px;
    border-radius: 6px 6px 0 0;
    -moz-border-radius: 6px 6px 0 0;
    -webkit-border-radius: 6px 6px 0 0;
}
.tabs ul li.selected a {
    color: #444;
    padding: 11px 8px 11px 6px ;
}

.tab-pane {
    display: none;
}
.tab-pane.selected {
    display: block;
}
.slider {
    white-space:nowrap;
    position: relative;
    left: 0;
    -moz-transition-duration: .3s;
    -moz-transition-property: left, right;
    -webkit-transition-duration: .3s;
    -webkit-transition-property: left, right;
}
.html-rtl .slider {
    left: auto;
    right: 0;
}
.slider-mask {
    width: 100%;
    overflow: hidden;
}
.slider .tab-pane {
    vertical-align: top;
    width: 100%;
    display: inline-block;
}

/************************************/
/*             LIGHTBOX             */
/************************************/

#lightbox {
    background: rgba(0,0,0,.9);
    position: absolute;
    width: 100%;
    height: 101%;
    display: none;
    z-index: 9000;
    color: white;
    text-align: center;
    opacity: 0;
    overflow: hidden;
    pointer-events: none;
    -moz-transition: .5s opacity ease;
    -webkit-transition: .5s opacity ease;
}
#lightbox .close {
    display: block;
    position: absolute;
    z-index: 100;
    font-family: sans-serif;
    color: white;
    top: 14px;
    right: 14px;
    line-height: 12px;
    text-align: center;
    -moz-border-radius: 8px;
    -webkit-border-radius: 8px;
    border-radius: 8px;
    width: 12px;
    height: 12px;
    padding: 12px;
    border: 1px solid white;
}

#lightbox.show {
    pointer-events: auto;
    opacity: 1;
}
#lightbox section {
    position: relative;
    width: 100%;
    height: 100%;
}
#lightbox .content {
    height: 70%;
    display: block;
    position: relative;
    text-align: center;
}
#lightbox .controls {
    height: 25%;
    min-height: 100px;
    position: relative;
    padding: 5% 40px 0;
}
#lightbox .control.prev,
#lightbox .control.next {
    color: #fff;
    left: 0;
    -moz-transition: .3s opacity ease;
}
.html-rtl #lightbox .control.prev {
    left: auto;
    right: 0;
}
#lightbox .control.next {
    left: auto;
    right: 0;
}
.html-rtl #lightbox .control.next {
    right: auto;
    left: 0;
}
#lightbox .control.disabled {
    opacity: 0;
}
#lightbox .caption {
    font-size: 18px;
}
#lightbox img {
    max-width: 95%;
    max-height: 100%;
    -moz-transition: .5s opacity ease;
    -webkit-transition: .5s opacity ease;
    opacity: 0;
    position: absolute;
}

/************************************/
/*           DETAILS PAGE           */
/************************************/

td .versions li a {
    display: block;
    margin: 0 0 8px;
}
td .versions li:last-child a {
    margin: 0;
}
/* ... */

